apache-php7.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    app: apache
spec:
  containers:
    - name: apache
      image: php:7.4-apache
