teste-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: teste
  labels:
    app: teste
spec:
  containers:
    - name: teste
      image: php:7.4-apache
