teste-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teste-service
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
