ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-server
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: apache-service
          servicePort: 8080
