teste-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-ingress
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - http:
    paths:
    - pathType: Prefix
      path: "/teste"
      backend:
        service:
          name: teste-service
          port:
            number: 80
